
[TestParseTypeAnnNoErrors/FuncWithoutParams - 1]
&ast.FuncTypeAnn{
    TypeParams: nil,
    Params:     {
    },
    Return: &ast.NumberTypeAnn{
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:9},
            End:      ast.Location{Line:1, Column:15},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Throws: nil,
    span:   ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:15},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/StringLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.StrLit{
        Value: "hello",
        span:  ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:8},
            SourceID: 0,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:8},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/NumberTypeAnn - 1]
&ast.NumberTypeAnn{
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:7},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/StringTypeAnn - 1]
&ast.StringTypeAnn{
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:7},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/NumberLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.NumLit{
        Value: 5,
        span:  ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:2},
            SourceID: 0,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:2},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/FuncWithParams - 1]
&ast.FuncTypeAnn{
    TypeParams: nil,
    Params:     {
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name:    "x",
                TypeAnn: nil,
                Default: nil,
                span:    ast.Span{
                    Start:    ast.Location{Line:1, Column:4},
                    End:      ast.Location{Line:1, Column:5},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: false,
            TypeAnn:  &ast.NumberTypeAnn{
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:7},
                    End:      ast.Location{Line:1, Column:13},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name:    "y",
                TypeAnn: nil,
                Default: nil,
                span:    ast.Span{
                    Start:    ast.Location{Line:1, Column:15},
                    End:      ast.Location{Line:1, Column:16},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: false,
            TypeAnn:  &ast.StringTypeAnn{
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:18},
                    End:      ast.Location{Line:1, Column:24},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
    },
    Return: &ast.BooleanTypeAnn{
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:29},
            End:      ast.Location{Line:1, Column:36},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Throws: nil,
    span:   ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:36},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/FuncWithTypeParams - 1]
&ast.FuncTypeAnn{
    TypeParams: {
        &ast.TypeParam{
            Name:       "T",
            Constraint: &ast.NumberTypeAnn{
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:7},
                    End:      ast.Location{Line:1, Column:13},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Default: nil,
        },
        &ast.TypeParam{
            Name:       "U",
            Constraint: &ast.StringTypeAnn{
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:18},
                    End:      ast.Location{Line:1, Column:24},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Default: nil,
        },
    },
    Params: {
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name:    "x",
                TypeAnn: nil,
                Default: nil,
                span:    ast.Span{
                    Start:    ast.Location{Line:1, Column:26},
                    End:      ast.Location{Line:1, Column:27},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: false,
            TypeAnn:  &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:29},
                        End:      ast.Location{Line:1, Column:30},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:29},
                    End:      ast.Location{Line:1, Column:30},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name:    "y",
                TypeAnn: nil,
                Default: nil,
                span:    ast.Span{
                    Start:    ast.Location{Line:1, Column:32},
                    End:      ast.Location{Line:1, Column:33},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: false,
            TypeAnn:  &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:35},
                        End:      ast.Location{Line:1, Column:36},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:35},
                    End:      ast.Location{Line:1, Column:36},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
    },
    Return: &ast.BooleanTypeAnn{
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:41},
            End:      ast.Location{Line:1, Column:48},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Throws: nil,
    span:   ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:48},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/UnionAndIntersectionType - 1]
&ast.UnionTypeAnn{
    Types: {
        &ast.IntersectionTypeAnn{
            Types: {
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "A",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:1},
                            End:      ast.Location{Line:1, Column:2},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:1},
                        End:      ast.Location{Line:1, Column:2},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "B",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:5},
                            End:      ast.Location{Line:1, Column:6},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:5},
                        End:      ast.Location{Line:1, Column:6},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:6},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.IntersectionTypeAnn{
            Types: {
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "X",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:9},
                            End:      ast.Location{Line:1, Column:10},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:9},
                        End:      ast.Location{Line:1, Column:10},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Y",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:13},
                            End:      ast.Location{Line:1, Column:14},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:13},
                        End:      ast.Location{Line:1, Column:14},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:9},
                End:      ast.Location{Line:1, Column:14},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:14},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/IntersectionType - 1]
&ast.IntersectionTypeAnn{
    Types: {
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:1},
                    End:      ast.Location{Line:1, Column:2},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:2},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:5},
                    End:      ast.Location{Line:1, Column:6},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:5},
                End:      ast.Location{Line:1, Column:6},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "C",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:9},
                    End:      ast.Location{Line:1, Column:10},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:9},
                End:      ast.Location{Line:1, Column:10},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:10},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/UnionType - 1]
&ast.UnionTypeAnn{
    Types: {
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:1},
                    End:      ast.Location{Line:1, Column:2},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:2},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:5},
                    End:      ast.Location{Line:1, Column:6},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:5},
                End:      ast.Location{Line:1, Column:6},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "C",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:9},
                    End:      ast.Location{Line:1, Column:10},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:9},
                End:      ast.Location{Line:1, Column:10},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:10},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/IndexedTypeWithDot - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "A",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:2},
                SourceID: 0,
            },
        },
        Right: &ast.Ident{
            Name: "B",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:3},
                End:      ast.Location{Line:1, Column:4},
                SourceID: 0,
            },
        },
    },
    TypeArgs: {
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:4},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/IndexedTypeWithBrackets - 1]
&ast.IndexTypeAnn{
    Target: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:2},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:2},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Index: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:3},
                End:      ast.Location{Line:1, Column:4},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:3},
            End:      ast.Location{Line:1, Column:4},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:5},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/MutableType - 1]
&ast.MutableTypeAnn{
    Target: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:5},
                End:      ast.Location{Line:1, Column:6},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:5},
            End:      ast.Location{Line:1, Column:6},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:5},
        End:      ast.Location{Line:1, Column:6},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/ConditionalType - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:4},
                End:      ast.Location{Line:1, Column:5},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:4},
            End:      ast.Location{Line:1, Column:5},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:8},
                End:      ast.Location{Line:1, Column:9},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:8},
            End:      ast.Location{Line:1, Column:9},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "C",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:12},
                End:      ast.Location{Line:1, Column:13},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:12},
            End:      ast.Location{Line:1, Column:13},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Else: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "D",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:23},
                End:      ast.Location{Line:1, Column:24},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:23},
            End:      ast.Location{Line:1, Column:24},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:24},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/BasicObjectType - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name:      "a",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:1, Column:2},
                    End:      ast.Location{Line:1, Column:3},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: false,
            Readonly: false,
            Value:    &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "A",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:5},
                        End:      ast.Location{Line:1, Column:6},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:5},
                    End:      ast.Location{Line:1, Column:6},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name:      "b",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:1, Column:8},
                    End:      ast.Location{Line:1, Column:9},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: true,
            Readonly: false,
            Value:    &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "B",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:12},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:12},
                    End:      ast.Location{Line:1, Column:13},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.ComputedKey{
                Expr: &ast.IdentExpr{
                    Name:      "c",
                    Namespace: 0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:1, Column:16},
                        End:      ast.Location{Line:1, Column:17},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            Optional: false,
            Readonly: false,
            Value:    &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "C",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:20},
                        End:      ast.Location{Line:1, Column:21},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:20},
                    End:      ast.Location{Line:1, Column:21},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.ComputedKey{
                Expr: &ast.IdentExpr{
                    Name:      "d",
                    Namespace: 0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:1, Column:24},
                        End:      ast.Location{Line:1, Column:25},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            Optional: true,
            Readonly: false,
            Value:    &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "D",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:29},
                        End:      ast.Location{Line:1, Column:30},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:29},
                    End:      ast.Location{Line:1, Column:30},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:31},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/MappedObjectType - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name:       "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Keys",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:21},
                            End:      ast.Location{Line:1, Column:25},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                        &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "T",
                                span: ast.Span{
                                    Start:    ast.Location{Line:1, Column:26},
                                    End:      ast.Location{Line:1, Column:27},
                                    SourceID: 0,
                                },
                            },
                            TypeArgs: {
                            },
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:26},
                                End:      ast.Location{Line:1, Column:27},
                                SourceID: 0,
                            },
                            inferredType: nil,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:21},
                        End:      ast.Location{Line:1, Column:28},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            Name:  nil,
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:7},
                            End:      ast.Location{Line:1, Column:8},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:7},
                        End:      ast.Location{Line:1, Column:8},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:9},
                            End:      ast.Location{Line:1, Column:10},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:9},
                        End:      ast.Location{Line:1, Column:10},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:7},
                    End:      ast.Location{Line:1, Column:11},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: (*ast.MappedModifier)(nil),
            ReadOnly: (*ast.MappedModifier)(nil),
            Check:    nil,
            Extends:  nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:29},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/QualifiedTypeRefWithTypeArgs - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "Foo",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:4},
                SourceID: 0,
            },
        },
        Right: &ast.Ident{
            Name: "Bar",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:5},
                End:      ast.Location{Line:1, Column:8},
                SourceID: 0,
            },
        },
    },
    TypeArgs: {
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:9},
                    End:      ast.Location{Line:1, Column:10},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:9},
                End:      ast.Location{Line:1, Column:10},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:12},
                    End:      ast.Location{Line:1, Column:13},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:12},
                End:      ast.Location{Line:1, Column:13},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:14},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/QualifiedTypeRef - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "Foo",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:4},
                SourceID: 0,
            },
        },
        Right: &ast.Ident{
            Name: "Bar",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:5},
                End:      ast.Location{Line:1, Column:8},
                SourceID: 0,
            },
        },
    },
    TypeArgs: {
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:8},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/DeepQualifiedTypeRef - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Member{
            Left: &ast.Ident{
                Name: "Foo",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:1},
                    End:      ast.Location{Line:1, Column:4},
                    SourceID: 0,
                },
            },
            Right: &ast.Ident{
                Name: "Bar",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:5},
                    End:      ast.Location{Line:1, Column:8},
                    SourceID: 0,
                },
            },
        },
        Right: &ast.Ident{
            Name: "Baz",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:9},
                End:      ast.Location{Line:1, Column:12},
                SourceID: 0,
            },
        },
    },
    TypeArgs: {
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:12},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/RegexLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.RegexLit{
        Value: "/hello/gi",
        span:  ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:9},
            SourceID: 0,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:9},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/ConditionalTypeWithInfer - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:4},
                End:      ast.Location{Line:1, Column:5},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:4},
            End:      ast.Location{Line:1, Column:5},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Extends: &ast.FuncTypeAnn{
        TypeParams: nil,
        Params:     {
            &ast.Param{
                Pattern: &ast.RestPat{
                    Pattern: &ast.IdentPat{
                        Name:    "args",
                        TypeAnn: nil,
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:1, Column:14},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:11},
                        End:      ast.Location{Line:1, Column:18},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  &ast.InferTypeAnn{
                    Name: "P",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:20},
                        End:      ast.Location{Line:1, Column:27},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
        },
        Return: &ast.AnyTypeAnn{
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:32},
                End:      ast.Location{Line:1, Column:35},
                SourceID: 0,
            },
            inferredType: nil,
        },
        Throws: nil,
        span:   ast.Span{
            Start:    ast.Location{Line:1, Column:8},
            End:      ast.Location{Line:1, Column:35},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "P",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:38},
                End:      ast.Location{Line:1, Column:39},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:38},
            End:      ast.Location{Line:1, Column:39},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Else: &ast.NeverTypeAnn{
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:49},
            End:      ast.Location{Line:1, Column:54},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:54},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/InferType - 1]
&ast.InferTypeAnn{
    Name: "T",
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:8},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/ConditionalTypeWithChaining - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:4},
                End:      ast.Location{Line:1, Column:5},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:4},
            End:      ast.Location{Line:1, Column:5},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:8},
                End:      ast.Location{Line:1, Column:9},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:8},
            End:      ast.Location{Line:1, Column:9},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "C",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:12},
                End:      ast.Location{Line:1, Column:13},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:12},
            End:      ast.Location{Line:1, Column:13},
            SourceID: 0,
        },
        inferredType: nil,
    },
    Else: &ast.CondTypeAnn{
        Check: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "E",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:24},
                    End:      ast.Location{Line:1, Column:25},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:24},
                End:      ast.Location{Line:1, Column:25},
                SourceID: 0,
            },
            inferredType: nil,
        },
        Extends: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "F",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:28},
                    End:      ast.Location{Line:1, Column:29},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:28},
                End:      ast.Location{Line:1, Column:29},
                SourceID: 0,
            },
            inferredType: nil,
        },
        Then: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "G",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:32},
                    End:      ast.Location{Line:1, Column:33},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:32},
                End:      ast.Location{Line:1, Column:33},
                SourceID: 0,
            },
            inferredType: nil,
        },
        Else: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "H",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:43},
                    End:      ast.Location{Line:1, Column:44},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:43},
                End:      ast.Location{Line:1, Column:44},
                SourceID: 0,
            },
            inferredType: nil,
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:21},
            End:      ast.Location{Line:1, Column:44},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:44},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/FalseLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.BoolLit{
        Value: false,
        span:  ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:6},
            SourceID: 0,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:6},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/TrueLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.BoolLit{
        Value: true,
        span:  ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:5},
            SourceID: 0,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:5},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/UnknownTypeAnn - 1]
&ast.UnknownTypeAnn{
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:8},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/ObjectTypeWithRestSpread - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name:      "x",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:1, Column:2},
                    End:      ast.Location{Line:1, Column:3},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: false,
            Readonly: false,
            Value:    &ast.StringTypeAnn{
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:5},
                    End:      ast.Location{Line:1, Column:11},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:16},
                        End:      ast.Location{Line:1, Column:17},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:16},
                    End:      ast.Location{Line:1, Column:17},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:13},
                End:      ast.Location{Line:1, Column:17},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:18},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/ObjectTypeWithOnlyRestSpread - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:5},
                        End:      ast.Location{Line:1, Column:6},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:5},
                    End:      ast.Location{Line:1, Column:6},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:2},
                End:      ast.Location{Line:1, Column:6},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:7},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/ObjectTypeWithMultipleRestSpread - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name:      "x",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:1, Column:2},
                    End:      ast.Location{Line:1, Column:3},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: false,
            Readonly: false,
            Value:    &ast.StringTypeAnn{
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:5},
                    End:      ast.Location{Line:1, Column:11},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:16},
                        End:      ast.Location{Line:1, Column:17},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:16},
                    End:      ast.Location{Line:1, Column:17},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:13},
                End:      ast.Location{Line:1, Column:17},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name:      "y",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:1, Column:19},
                    End:      ast.Location{Line:1, Column:20},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: false,
            Readonly: false,
            Value:    &ast.NumberTypeAnn{
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:22},
                    End:      ast.Location{Line:1, Column:28},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:33},
                        End:      ast.Location{Line:1, Column:34},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:33},
                    End:      ast.Location{Line:1, Column:34},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:30},
                End:      ast.Location{Line:1, Column:34},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:35},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/Symbol - 1]
&ast.SymbolTypeAnn{
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:7},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/UniqueSymbol - 1]
&ast.UniqueSymbolTypeAnn{
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:14},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/TemplateLiteralTypeNoParams - 1]
&ast.TemplateLitTypeAnn{
    Quasis: {
        &ast.Quasi{
            Value: "hello-world",
            Span:  ast.Span{
                Start:    ast.Location{Line:1, Column:2},
                End:      ast.Location{Line:1, Column:14},
                SourceID: 0,
            },
        },
    },
    TypeAnns: {
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:14},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/TemplateLiteralType - 1]
&ast.TemplateLitTypeAnn{
    Quasis: {
        &ast.Quasi{
            Value: "hello-",
            Span:  ast.Span{
                Start:    ast.Location{Line:1, Column:2},
                End:      ast.Location{Line:1, Column:10},
                SourceID: 0,
            },
        },
        &ast.Quasi{
            Value: "",
            Span:  ast.Span{
                Start:    ast.Location{Line:1, Column:12},
                End:      ast.Location{Line:1, Column:13},
                SourceID: 0,
            },
        },
    },
    TypeAnns: {
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:10},
                    End:      ast.Location{Line:1, Column:11},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:10},
                End:      ast.Location{Line:1, Column:11},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:13},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/TemplateLiteralTypeMultipleParams - 1]
&ast.TemplateLitTypeAnn{
    Quasis: {
        &ast.Quasi{
            Value: "",
            Span:  ast.Span{
                Start:    ast.Location{Line:1, Column:2},
                End:      ast.Location{Line:1, Column:4},
                SourceID: 0,
            },
        },
        &ast.Quasi{
            Value: "-",
            Span:  ast.Span{
                Start:    ast.Location{Line:1, Column:6},
                End:      ast.Location{Line:1, Column:9},
                SourceID: 0,
            },
        },
        &ast.Quasi{
            Value: "-",
            Span:  ast.Span{
                Start:    ast.Location{Line:1, Column:11},
                End:      ast.Location{Line:1, Column:14},
                SourceID: 0,
            },
        },
        &ast.Quasi{
            Value: "",
            Span:  ast.Span{
                Start:    ast.Location{Line:1, Column:16},
                End:      ast.Location{Line:1, Column:17},
                SourceID: 0,
            },
        },
    },
    TypeAnns: {
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:4},
                    End:      ast.Location{Line:1, Column:5},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:4},
                End:      ast.Location{Line:1, Column:5},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:9},
                    End:      ast.Location{Line:1, Column:10},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:9},
                End:      ast.Location{Line:1, Column:10},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "C",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:14},
                    End:      ast.Location{Line:1, Column:15},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:14},
                End:      ast.Location{Line:1, Column:15},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:17},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/KeyOfType - 1]
&ast.KeyOfTypeAnn{
    Type: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:7},
                End:      ast.Location{Line:1, Column:8},
                SourceID: 0,
            },
        },
        TypeArgs: {
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:7},
            End:      ast.Location{Line:1, Column:8},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:8},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/KeyOfObjectType - 1]
&ast.KeyOfTypeAnn{
    Type: &ast.ObjectTypeAnn{
        Elems: {
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name:      "x",
                    Namespace: 0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:1, Column:8},
                        End:      ast.Location{Line:1, Column:9},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Optional: false,
                Readonly: false,
                Value:    &ast.StringTypeAnn{
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:11},
                        End:      ast.Location{Line:1, Column:17},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name:      "y",
                    Namespace: 0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:1, Column:19},
                        End:      ast.Location{Line:1, Column:20},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Optional: false,
                Readonly: false,
                Value:    &ast.NumberTypeAnn{
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:22},
                        End:      ast.Location{Line:1, Column:28},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
        },
        span: ast.Span{
            Start:    ast.Location{Line:1, Column:7},
            End:      ast.Location{Line:1, Column:29},
            SourceID: 0,
        },
        inferredType: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:29},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/UnionTypeWithKeyOf - 1]
&ast.UnionTypeAnn{
    Types: {
        &ast.KeyOfTypeAnn{
            Type: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:7},
                        End:      ast.Location{Line:1, Column:8},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:7},
                    End:      ast.Location{Line:1, Column:8},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:8},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:11},
                    End:      ast.Location{Line:1, Column:12},
                    SourceID: 0,
                },
            },
            TypeArgs: {
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:11},
                End:      ast.Location{Line:1, Column:12},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:12},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeOptionalProperties - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name:       "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:28},
                                End:      ast.Location{Line:1, Column:29},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:28},
                            End:      ast.Location{Line:1, Column:29},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:22},
                        End:      ast.Location{Line:1, Column:29},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            Name:  nil,
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:8},
                            End:      ast.Location{Line:1, Column:9},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:8},
                        End:      ast.Location{Line:1, Column:9},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:11},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:11},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:8},
                    End:      ast.Location{Line:1, Column:12},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: &"add",
            ReadOnly: (*ast.MappedModifier)(nil),
            Check:    nil,
            Extends:  nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:30},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypePropertyRenaming - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name:       "K",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:39},
                                End:      ast.Location{Line:1, Column:40},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:39},
                            End:      ast.Location{Line:1, Column:40},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:33},
                        End:      ast.Location{Line:1, Column:40},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            Name: &ast.TemplateLitTypeAnn{
                Quasis: {
                    &ast.Quasi{
                        Value: "prefix_",
                        Span:  ast.Span{
                            Start:    ast.Location{Line:1, Column:4},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    &ast.Quasi{
                        Value: "",
                        Span:  ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:16},
                            SourceID: 0,
                        },
                    },
                },
                TypeAnns: {
                    &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "K",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:13},
                                End:      ast.Location{Line:1, Column:14},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:13},
                            End:      ast.Location{Line:1, Column:14},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:3},
                    End:      ast.Location{Line:1, Column:16},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:19},
                            End:      ast.Location{Line:1, Column:20},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:19},
                        End:      ast.Location{Line:1, Column:20},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:21},
                            End:      ast.Location{Line:1, Column:22},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:21},
                        End:      ast.Location{Line:1, Column:22},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:19},
                    End:      ast.Location{Line:1, Column:23},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: (*ast.MappedModifier)(nil),
            ReadOnly: (*ast.MappedModifier)(nil),
            Check:    nil,
            Extends:  nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:41},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeWithFiltering - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name:       "K",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:27},
                                End:      ast.Location{Line:1, Column:28},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:27},
                            End:      ast.Location{Line:1, Column:28},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:21},
                        End:      ast.Location{Line:1, Column:28},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            Name:  nil,
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:7},
                            End:      ast.Location{Line:1, Column:8},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:7},
                        End:      ast.Location{Line:1, Column:8},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:9},
                            End:      ast.Location{Line:1, Column:10},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:9},
                        End:      ast.Location{Line:1, Column:10},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:7},
                    End:      ast.Location{Line:1, Column:11},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: (*ast.MappedModifier)(nil),
            ReadOnly: (*ast.MappedModifier)(nil),
            Check:    &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:32},
                            End:      ast.Location{Line:1, Column:33},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:32},
                        End:      ast.Location{Line:1, Column:33},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:34},
                            End:      ast.Location{Line:1, Column:35},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:34},
                        End:      ast.Location{Line:1, Column:35},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:32},
                    End:      ast.Location{Line:1, Column:36},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Extends: &ast.StringTypeAnn{
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:39},
                    End:      ast.Location{Line:1, Column:45},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:46},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeRemoveOptionalProperties - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name:       "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:29},
                                End:      ast.Location{Line:1, Column:30},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:29},
                            End:      ast.Location{Line:1, Column:30},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:23},
                        End:      ast.Location{Line:1, Column:30},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            Name:  nil,
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:9},
                            End:      ast.Location{Line:1, Column:10},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:9},
                        End:      ast.Location{Line:1, Column:10},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:11},
                            End:      ast.Location{Line:1, Column:12},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:11},
                        End:      ast.Location{Line:1, Column:12},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:9},
                    End:      ast.Location{Line:1, Column:13},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: &"remove",
            ReadOnly: (*ast.MappedModifier)(nil),
            Check:    nil,
            Extends:  nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:31},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeAddOptionalProperties - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name:       "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:29},
                                End:      ast.Location{Line:1, Column:30},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:29},
                            End:      ast.Location{Line:1, Column:30},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:23},
                        End:      ast.Location{Line:1, Column:30},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            Name:  nil,
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:9},
                            End:      ast.Location{Line:1, Column:10},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:9},
                        End:      ast.Location{Line:1, Column:10},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:11},
                            End:      ast.Location{Line:1, Column:12},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:11},
                        End:      ast.Location{Line:1, Column:12},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:9},
                    End:      ast.Location{Line:1, Column:13},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: &"add",
            ReadOnly: (*ast.MappedModifier)(nil),
            Check:    nil,
            Extends:  nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:31},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/MutableUnionTypeWithParens - 1]
nil
---

[TestParseTypeAnnNoErrors/MutableUnionType - 1]
&ast.UnionTypeAnn{
    Types: {
        &ast.MutableTypeAnn{
            Target: &ast.NumberTypeAnn{
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:5},
                    End:      ast.Location{Line:1, Column:11},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:5},
                End:      ast.Location{Line:1, Column:11},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.StringTypeAnn{
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:14},
                End:      ast.Location{Line:1, Column:20},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:5},
        End:      ast.Location{Line:1, Column:20},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/ObjectTypeWithReadonlyProperty - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name:      "id",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:1, Column:2},
                    End:      ast.Location{Line:1, Column:4},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: false,
            Readonly: false,
            Value:    &ast.NumberTypeAnn{
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:6},
                    End:      ast.Location{Line:1, Column:12},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name:      "name",
                Namespace: 0,
                Source:    nil,
                span:      ast.Span{
                    Start:    ast.Location{Line:1, Column:23},
                    End:      ast.Location{Line:1, Column:27},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: false,
            Readonly: true,
            Value:    &ast.StringTypeAnn{
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:29},
                    End:      ast.Location{Line:1, Column:35},
                    SourceID: 0,
                },
                inferredType: nil,
            },
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:36},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeAddReadonlyProperties - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name:       "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:37},
                                End:      ast.Location{Line:1, Column:38},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:37},
                            End:      ast.Location{Line:1, Column:38},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:31},
                        End:      ast.Location{Line:1, Column:38},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            Name:  nil,
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:17},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:17},
                        End:      ast.Location{Line:1, Column:18},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:19},
                            End:      ast.Location{Line:1, Column:20},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:19},
                        End:      ast.Location{Line:1, Column:20},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:17},
                    End:      ast.Location{Line:1, Column:21},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: (*ast.MappedModifier)(nil),
            ReadOnly: &"add",
            Check:    nil,
            Extends:  nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:39},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeReadonlyProperties - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name:       "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:36},
                                End:      ast.Location{Line:1, Column:37},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:36},
                            End:      ast.Location{Line:1, Column:37},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:30},
                        End:      ast.Location{Line:1, Column:37},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            Name:  nil,
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:16},
                            End:      ast.Location{Line:1, Column:17},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:16},
                        End:      ast.Location{Line:1, Column:17},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:18},
                            End:      ast.Location{Line:1, Column:19},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:18},
                        End:      ast.Location{Line:1, Column:19},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:16},
                    End:      ast.Location{Line:1, Column:20},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: (*ast.MappedModifier)(nil),
            ReadOnly: &"add",
            Check:    nil,
            Extends:  nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:38},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeRemoveReadonlyProperties - 1]
&ast.ObjectTypeAnn{
    Elems: {
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name:       "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:37},
                                End:      ast.Location{Line:1, Column:38},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:37},
                            End:      ast.Location{Line:1, Column:38},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:31},
                        End:      ast.Location{Line:1, Column:38},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            Name:  nil,
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:17},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:17},
                        End:      ast.Location{Line:1, Column:18},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:19},
                            End:      ast.Location{Line:1, Column:20},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:19},
                        End:      ast.Location{Line:1, Column:20},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:17},
                    End:      ast.Location{Line:1, Column:21},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Optional: (*ast.MappedModifier)(nil),
            ReadOnly: &"remove",
            Check:    nil,
            Extends:  nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:39},
        SourceID: 0,
    },
    inferredType: nil,
}
---
